# deadmon

./: .dockerignore  .envrc  .gitignore  Dockerfile  LICENSE  README.md  deadmon.conf  docker-compose.yaml  justfile  pyproject.toml
deadmon/: __init__.py  app.py  cli.py  snmpping.py
docs/: configuration.md  deployment.md  usage.md
tests/: test_alert_config.py  test_config_reload.py  test_snmp.py
