# SPDX-License-Identifier: MIT
# Copyright (c) 2018 Interop Tokyo ShowNet NOC team
# Copyright (c) 2026 deadmon contributors
# Based on the original deadman work by upa@haeena.net.

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "deadmon"
version = "1.0.0"
description = "Web-native reachability monitor based on the original deadman work."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "PyYAML>=6.0,<7",
    "uvicorn[standard]>=0.30,<1",
]

[dependency-groups]
dev = [
    "black>=25.0,<26",
    "ruff>=0.8,<1",
]

[project.scripts]
deadmon = "deadmon.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["deadmon"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
