# SPDX-License-Identifier: MIT
# Copyright (c) 2018 Interop Tokyo ShowNet NOC team
# Copyright (c) 2026 Joe Clarke <jclarke@marcuscom.com>
# Based on the original deadman work by upa@haeena.net.

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "deadmon"
version = "1.3.1"
description = "Web-native reachability monitor based on the original deadman work."
authors = [{ name = "Joe Clarke", email = "jclarke@marcuscom.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = ["PyYAML>=6.0,<7", "uvicorn[standard]>=0.30,<1"]

[project.urls]
Homepage = "https://github.com/xorrkaz/deadmon"
Issues = "https://github.com/xorrkaz/deadmon/issues"

[dependency-groups]
dev = ["ruff>=0.8,<1"]

[project.scripts]
deadmon = "deadmon.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["deadmon"]

[tool.ruff]
line-length = 140
target-version = "py311"
extend-include = ["bin/deadmon", "bin/deadmon-convert-config", "bin/snmpping"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["deadmon"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
